--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "typeorm",
+  "name": "@andreleifeld/typeorm-vite",
   "private": true,
-  "version": "0.3.17",
-  "description": "Data-Mapper ORM for TypeScript, ES7, ES6, ES5. Supports MySQL, PostgreSQL, MariaDB, SQLite, MS SQL Server, Oracle, MongoDB databases.",
+  "version": "0.3.17-patch1",
+  "description": "Vite compatible fork of Data-Mapper ORM for TypeScript, ES7, ES6, ES5. Supports MySQL, PostgreSQL, MariaDB, SQLite, MS SQL Server, Oracle, MongoDB databases.",
   "license": "MIT",
   "readmeFilename": "README.md",
   "author": {
     "name": "Umed Khudoiberdiev",
     "email": "pleerock.me@gmail.com"
   },
+  "contributors": [
+    {
+      "name": "André Leifeld",
+      "email": "mail@andreleifeld.de"
+    }
+  ],
   "engines": {
     "node": ">= 12.9.0"
   },
@@ -66,10 +72,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/typeorm/typeorm.git"
+    "url": "https://github.com/typeorm-vite/typeorm-vite.git"
   },
   "bugs": {
-    "url": "https://github.com/typeorm/typeorm/issues"
+    "url": "https://github.com/typeorm-vite/typeorm-vite/issues"
   },
   "homepage": "https://typeorm.io",
   "tags": [
@@ -97,8 +103,9 @@
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/debug": "^4.1.7",
+    "@types/glob": "^8.1.0",
     "@types/mkdirp": "^1.0.2",
-    "@types/mocha": "^10.0.1",
+    "@types/mocha": "^10.0.2",
     "@types/node": "^18.13.0",
     "@types/sha.js": "^2.4.0",
     "@types/sinon": "^10.0.13",
@@ -139,6 +146,7 @@
     "sql.js": "^1.8.0",
     "sqlite3": "^5.1.4",
     "ts-node": "^10.9.1",
+    "tsc": "^2.0.4",
     "typeorm-aurora-data-api-driver": "^2.4.4",
     "typescript": "^4.9.5"
   },
